# course_generator

./: .gitignore  LICENSE  README.md  TECHNICAL_README.md  course_generator_agent.py  course_generator_agent_old.py  generate_course.py  pyproject.toml  qflow.py  requirements.txt  story_generator_agent.py
.github/workflows/: python-tests.yml
ai_course_generator/: course_generator_agent.py  emoji-support.tex  generate_course.py  mcq_generator_agent.py  mermaid_processor.py
doc/: mcq_generator.md
docs/: architecture.md  build-system.md  deployment.md  development.md  files.md  project-overview.md  testing.md
mcqs/: mcqs.json
prompts/: course_chapter_prompt.j2  course_outline_prompt.j2  course_system_prompt.j2  course_title_generation_prompt.j2  course_title_system_prompt.j2
quiz_player/: quiz.html
